--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,33 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.traffic-light{
+    background: black;
+    padding: 10px;
+    display: inline-block;
+    margin-left: 800px;
+    margin-top: 100px;
+    border-radius: 20px;
+
+}
+.red-light{
+    width: 100px;
+    height: 100px;
+    border-radius:50px;
+    background-color:red
+}
+.yellow-light{
+    width: 100px;
+    height: 100px;
+    border-radius:50px;
+    background-color:yellow
+}
+.green-light{
+    width: 100px;
+    height: 100px;
+    border-radius:50px;
+    background-color:green;
+}
+.glow{
+    box-shadow: 0px 0px 10px 10px white; 
+}
